遷移に苦戦中

--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thyleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>403エラー</title>
 </head>
 <body>
-
+	<div>
+		<div>
+			<h1>403 error page</h1>
+		</div>
+		
+		
+	</div>
+	
+	
 </body>
 </html>
