--- a/src/main/resources/templates/error/general.html
+++ b/src/main/resources/templates/error/general.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns = "http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>default error page</title>
 </head>
 <body>
+	<div>
+		<h1>default error page</h1>
+	</div>
 
 </body>
 </html>
