データベースとの接続はできているが中身が空かth:eachが機能していない

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -29,7 +29,7 @@
           <div >
             <label for="password" >password</label>
             <div>
-              <input id="password"  type="password" name="password" value="admin" />
+              <input id="password"  type="password" name="password" value="1234" />
             </div>
           </div>
 
