--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -20,21 +20,21 @@
 			<th>郵便番号</th>
 			<th>登録日</th>
 		</tr>
-		
-		<tr th:each="index : ${list}">
-			<td th:text="${index.cust_no}"></td>
-			<td th:text="${index.last_nm}"></td>
-			<td th:text="${index.first_nm}"></td>
-			<td th:text="${index.last_nm_kana}"></td>
-			<td th:text="${index.first_nm_kana}"></td>
-			<td th:text="${index.gender_cd}"></td>
-			<td th:text="${index.mail_address}"></td>
-			<td th:text="${index.tel_no}"></td>
-			<td th:text="${index.birth_date}"></td>
-			<td th:text="${index.home_address}"></td>
-			<td th:text="${index.post_number}"></td>
-			<td th:text="${index.reg_date}"></td>
+		<tr th:each="index : ${list}" th:object="${index}">
+			<td th:text="${cust_nm}">1</td>
+			<td th:text="${last_nm}">1</td>
+			<td th:text="${first_nm}">1</td>
+			<td th:text="${last_nm_kana}">1</td>
+			<td th:text="${first_nm_kana}">1</td>
+			<td th:text="${gender_cd}">1</td>
+			<td th:text="${mail_address}">1</td>
+			<td th:text="${tel_no}">1</td>
+			<td th:text="${birth_date}">1</td>
+			<td th:text="${home_address}">1</td>
+			<td th:text="${post_number}">1</td>
+			<td th:text="${reg_date}">1</td>
 		</tr>
+		
 	</table>
 
 </body>
