ログイン機能完成

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -27,7 +27,7 @@
         
           <!-- username -->
           <div >
-            <label for="username" th:utext="#{login.username}">username</label>
+            <label for="username" th:utext="#{login.username}"></label>
             <div >
               <input id="username"  type="text" name="username" value="" required/>
             </div>
