--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -15,7 +15,7 @@
   </div>
   <div>
     <div >
-      <h1 th:utext="#{login.login.title}">login.login.title</h1>
+      <h1 th:text="#{login.login.title}">login.login.title</h1>
       <p>m_userテーブル id= 「kono」 password = 1234</p>
       <p>id = 「konono」　password = 1111</p>
     </div>
