--- a/src/main/resources/templates/customer/save.html
+++ b/src/main/resources/templates/customer/save.html
@@ -40,9 +40,9 @@
           <tr>
             <th th:utext="#{gender_cd}">gender_cd</th>
             <td>
-            <span th:if="${index.gender_cd eq 1}" ><div>男</div></span>
-				<span th:if="${index.gender_cd eq 2}" ><div>女</div></span>
-				<span th:if="${index.gender_cd eq 3}" ><div>未定義</div></span>
+            <span th:if="${customerForm.gender_cd eq 1}" ><div>男</div></span>
+				<span th:if="${customerForm.gender_cd eq 2}" ><div>女</div></span>
+				<span th:if="${customerForm.gender_cd eq 3}" ><div>未定義</div></span>
             </td>
           </tr>
           <tr>
