--- a/src/main/resources/templates/customer/search.html
+++ b/src/main/resources/templates/customer/search.html
@@ -1,10 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<titleb th:text="customer.search.title">customer.search.index</title>
 </head>
 <body>
+	<div>
+		<!-- 削除・空・エラーメッセージを渡されたら表示します(RedirectAttributeで渡される) -->
+		
+		<p th:if="${errorMessage}" th:text="${errorMessage}">error message</p>
+		<p th:if="${deleteMessage}" th:text="${deleteMessage}">delete message</p>
+		<p th:if="${emptyMessage}" th:text="${emptyMessage}">empty Message</p>
+	</div>
+	<div>
+		<li role="presentation"><a href="/customer/create" th:href="@{/customer/create}" th:text="#{customer.create.title}">create</a></li>
+	</div>
+	<div>
+		<form action="/customer/search" th:action="@{/customer/search}" method="poost" th:object="${customerForm}">
+			<select name="key" th:field="*{key}" >
+				<option value="cust_no" th:text="#{cust_no}"></option>
+				<option value="last_nm" th:text="#{last_nm}"></option>
+				<option value="first_nm" th:text="#{first_nm}"></option>
+				<option value="last_nm_kana" th:text="#{last_nm_kana}"></option>
+				<option value="first_nm_kana" th:text="#{first_nm_kana}"></option>
+				<option value="gender_cd" th:text="#{gender_cd}"></option>
+				<option value="mail_address" th:text="#{mail_address}"></option>
+				<option value="tel_no" th:text="#{tel_no}"></option>
+				<option value="birth_date" th:text="#{birth_date}"></option>
+				<option value="home_address" th:text="#{home_address}"></option>
+				<option value="post_number" th:text="#{post_number}"></option>
+				<option value="reg_date" th:text="#{reg_date}"></option>
+			</select>
+			<span>
+				<input type="text" name="keyward" class="form-control" th:field="*{keyword}" size="30" placeholder="キーワードを入力してください" />	
+				<input type="submit" value="検索" />
+			</span>
+		</form>
+	</div>
+	
 
+	<table border="1">
+		<tr>
+			<!-- 文字化け、??～～～??、「□」などが表示される場合、文字コードや半角全角をチェック（特に全角の改行は「□」となって化けて出てくる -->
+			
+			<th　th:text="#{cust_no}"></th>
+			<th th:text="#{last_nm}"></th>
+			<th th:text="#{first_nm}"></th>
+			<th th:text="#{last_nm_kana}"></th>
+			<th th:text="#{first_nm_kana}"></th>
+			<th th:text="#{gender_cd}"></th>
+			<th th:text="#{mail_address}"></th>
+			<th th:text="#{tel_no}"></th>
+			<th th:text="#{birth_date}"></th>
+			<th th:text="#{home_address}"></th>
+			<th th:text="#{post_number}"></th>
+			<th th:text="#{reg_date}"></th>
+		</tr>
+		
+		<!-- Controllerから渡されたBeanが入っているListを取り出し、Beanに格納された各フィールドを表示します -->
+		
+		<tr th:each="index : ${searchList}" th:object="${searchList}">
+			<td>
+				<a href="/customer/${index.cust_no}" th:href="@{/customer/{cust_no}(cust_no=${index.cust_no})}" th:text="${index.cust_no}">1</a>
+			</td>
+			<td th:text="${index.last_nm}">1</td>
+			<td th:text="${index.first_nm}">1</td>
+			<td th:text="${index.last_nm_kana}">1</td>
+			<td th:text="${index.first_nm_kana}">1</td>
+			
+			<!-- DB上では性別はIntegerで管理されているのでth:ifを使います -->
+			<td>
+				<span th:if="${index.gender_cd eq 1}" ><div>男</div></span>
+				<span th:if="${index.gender_cd eq 2}" ><div>女</div></span>
+				<span th:if="${index.gender_cd eq 3}" ><div>未定義</div></span>
+			</td>
+			<td th:text="${index.mail_address}">1</td>
+			<td th:text="${index.tel_no}">1</td>
+			<td th:text="${index.birth_date}">1</td>
+			<td th:text="${index.home_address}">1</td>
+			<td th:text="${index.post_number}">1</td>
+			<td th:text="${index.reg_date}">1</td>
+			<td>
+				<a href="/customer/edit/${index.cust_no}" th:href="@{/customer/edit/{cust_no}(cust_no=${index.cust_no})}">edit</a>
+				<a href="/customer/delete/${index.cust_no}" th:href="@{/customer/delete/{cust_no}(cust_no=${index.cust_no})}">delete</a>
+			</td>
+		</tr>
+		
+	</table>
+		
 </body>
 </html>
