後回しにしていたログアウト機能とjqueryを追加

--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -87,6 +87,9 @@
 		</tr>
 		
 	</table>
+	<form role="form" id="logout" th:action="@{/logout}" method="post">
+    <button type="submit">ログアウト</button>
+</form>
 		
 </body>
 </html>
