バリデーション機能追加。次は検索結果0と顧客番号重複した際のエラー表示を改善する

--- a/src/main/resources/templates/customer/create.html
+++ b/src/main/resources/templates/customer/create.html
@@ -19,9 +19,10 @@
 			<div>
 				<label for="id_cust_no" th:text="#{cust_no}" >cust_no</label>
 				<div>
-					<input id="id_cust_no" type="text" name="cust_no" th:field="*{cust_no}" />
+					<input id="id_cust_no" type="text" name="check_no" th:field="*{check_no}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('check_no')}" th:errors="*{check_no}" style="color: red"></span>
 			</div>
 			
 			<!--  氏　-->
@@ -31,6 +32,7 @@
 					<input id="id_last_nm" type="text" name="last_nm" th:field="*{last_nm}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('last_nm')}" th:errors="*{last_nm}" style="color: red"></span>
 			</div>
 			
 			<!--  名　-->
@@ -40,6 +42,7 @@
 					<input id="id_first_nm" type="text" name="first_nm" th:field="*{first_nm}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('first_nm')}" th:errors="*{first_nm}" style="color: red"></span>
 			</div>
 			
 			<!--  氏（フリガナ）　-->
@@ -49,6 +52,7 @@
 					<input id="id_last_nm_kana" type="text" name="last_nm_kana" th:field="*{last_nm_kana}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('last_nm_kana')}" th:errors="*{last_nm_kana}" style="color: red"></span>
 			</div>
 			
 			<!--  名（フリガナ）　-->
@@ -58,6 +62,7 @@
 					<input id="id_first_nm_kana" type="text" name="first_nm_kana" th:field="*{first_nm_kana}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('first_nm_kana')}" th:errors="*{first_nm_kana}" style="color: red"></span>
 			</div>
 			
 			<!--  性別コード　-->
@@ -71,6 +76,7 @@
 					</select>
 					
 				</div>
+				<span th:if="${#fields.hasErrors('gender_cd')}" th:errors="*{gender_cd}" style="color: red"></span>
 			</div>
 			
 			<!--  メールアドレス -->
@@ -80,6 +86,7 @@
 					<input id="id_mail_address" type="text" name="mail_address" th:field="*{mail_address}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('mail_address')}" th:errors="*{mail_address}" style="color: red"></span>
 			</div>
 			
 			<!-- 電話番号 -->
@@ -89,6 +96,7 @@
 					<input id="id_tel_no" type="text" name="tel_no" th:field="*{tel_no}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('tel_no')}" th:errors="*{tel_no}" style="color: red"></span>
 			</div>
 			
 			<!--  誕生日　-->
@@ -98,6 +106,7 @@
 					<input id="id_birth_date" type="date" name="birth_date" th:field="*{birth_date}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('birth_date')}" th:errors="*{birth_date}" style="color: red"></span>
 			</div>
 			
 			<!--  住所　-->
@@ -107,6 +116,7 @@
 					<input id="id_home_address" type="text" name="home_address" th:field="*{home_address}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('home_address')}" th:errors="*{home_address}" style="color: red"></span>
 			</div>
 			
 			<!--  郵便番号-->
@@ -116,6 +126,7 @@
 					<input id="id_post_number" type="text" name="post_number" th:field="*{post_number}" />
 					
 				</div>
+				<span th:if="${#fields.hasErrors('post_number')}" th:errors="*{post_number}" style="color: red"></span>
 			</div>
 			
 			
